--- a/README.org
+++ b/README.org
@@ -1,1 +1,29 @@
-This is the stub README.txt for the "numeric-table" project.
+#+title: Numeric table
+
+* Aim
+
+  Replicate and expand functionality provided by Chapter 27 of
+  "Practical Common Lisp" for a data-structure more oriented towards
+  numerical data.
+
+  
+
+* COLUMN-MAJOR-TABLE
+
+  Stores data that is organized by columns, each column having a name
+  and storing values of a one type.
+
+* Architecture
+
+  I see this library supporting several types of internal data
+  formats.  They will be unified by a uniform interface (as much as
+  possible).  To that end, there is a section of the library that
+  deals with base class and generic function definitions.
+
+  These are then specialized for various table types.
+
+  Currently, I support only one table type, ~column-major-table~.
+  The data is stored as nested vectors.  Top level vector holds the
+  columns.  Each column is stored in a vector.
+
+  
