--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,22 @@
+2012-12-08  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* init/generic-numeric-table.lisp (make-table): Typo fix.
+
+	* column-major-table/interpolated-column.lisp (foreign-column-schema):
+	The acceleration slot is filled with the acceleration object
+	(init-column-interp): Modified test to interpolate a parabola.
+	(interp-column): Added acceleration argument to call to
+	gsll:evaluate
+
+	* README.org: Clarified text.
+
+2012-11-12  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* column-major-table/interpolated-column.lisp
+	(foreign-column-schema): Added acceleration slot.
+	(init-column-interp): Now testing interpolation of a cubic
+	function.  That should give exact results, but it does not
+
 2012-11-10  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* column-major-table/table-queries.lisp (restrict-rows): Modified
