brought make-table under initialize-instance :after
Until now, make-table did most of the table initializations.
I moved that into initialize-instance :after

The initialization of data is a bit shaky.  I need to step back and
rethink it.  All the tests pass, but I wonder if the code is not robust
enough

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,14 @@
+2013-01-12  Mirko Vukovic  <mirko.vukovic@us.tel.com>
+
+	* column-major-table/column-major-table-classes.lisp
+	(make-instance): Added method for instantiating a
+	column-major-table
+	(make-table): This function now leaves the intializations to
+	`make-instance'
+
+	* init/generic-numeric-table.lisp (make-instance): Added method
+	for instantiating a generic table.
+
 2013-01-11  Mirko Vukovic  <mirko.vukovic@us.tel.com>
 
 	* init/generic-numeric-table.lisp (table-description): Added
